Import patches-unapplied version 5.3.2-1 to debian/sid
Imported using git-ubuntu import.

Changelog parent: ffef5c208871d8678518dfaf8cb76af44efcca33

New changelog entries:
  * New upstream version

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+telepathy-mission-control-5 (5.3.2-1) unstable; urgency=low
+
+  * New upstream version
+
+ -- Simon McVittie <smcv@debian.org>  Mon, 02 Nov 2009 19:15:52 +0000
+
 telepathy-mission-control-5 (5.3.1-1) unstable; urgency=low
 
   * New upstream version
