--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+telepathy-mission-control-5 (5.3.2-2) unstable; urgency=low
+
+  * Also ship the AccountManager service file
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Fri, 06 Nov 2009 19:29:50 +0000
+
 telepathy-mission-control-5 (5.3.2-1) unstable; urgency=low
 
   * New upstream version
