--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+telepathy-mission-control-5 (5.3.2-3) unstable; urgency=low
+
+  * debian/update-patches.mk: updated
+  * debian/patches/0001-Only-time-out-channel-requests-after-many-hours.patch
+    + Added. A channel request done by mission-control should in never timeout,
+      update the timeout from dbus' standard 25 seconds to 5 hours (from
+      upstream git)
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Thu, 08 Apr 2010 15:00:33 +0100
+
 telepathy-mission-control-5 (5.3.2-2) unstable; urgency=low
 
   * Also ship the AccountManager service file
