--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+telepathy-mission-control-5 (5.4.1-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 25 May 2010 19:23:20 +0100
+
 telepathy-mission-control-5 (5.4.0-1) unstable; urgency=low
 
   * New upstream release
