--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+telepathy-mission-control-5 (5.4.2-1) unstable; urgency=low
+
+  * New upstream release, fixing potential segfaults on startup
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 26 May 2010 16:44:09 +0100
+
 telepathy-mission-control-5 (5.4.1-1) unstable; urgency=low
 
   * New upstream release
