--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+telepathy-mission-control-5 (5.5.0-2) experimental; urgency=low
+
+  * Really upload to experimental... (saved by the NEW queue!)
+
+ -- Simon McVittie <smcv@debian.org>  Thu, 27 May 2010 12:06:46 +0100
+
 telepathy-mission-control-5 (5.5.0-1) experimental; urgency=low
 
   * New upstream development release, to experimental for now
