--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+telepathy-mission-control-5 (1:5.6.0-1) experimental; urgency=low
+
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Thu, 16 Sep 2010 17:00:47 +0100
+
 telepathy-mission-control-5 (1:5.5.4-1) experimental; urgency=low
 
   * New upstream release
