Import patches-unapplied version 1:5.6.1-1 to debian/experimental
Imported using git-ubuntu import.

Changelog parent: 40b50ce3ed798106b4ec459536991694449830e0

New changelog entries:
  * New upstream release
  * Switch to a debhelper 8 rules file
  * Switch to source format 3.0 (quilt)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+telepathy-mission-control-5 (1:5.6.1-1) experimental; urgency=low
+
+  * New upstream release
+  * Switch to a debhelper 8 rules file
+  * Switch to source format 3.0 (quilt)
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 17 Nov 2010 12:16:37 +0000
+
 telepathy-mission-control-5 (1:5.6.0-1) experimental; urgency=low
 
   * New upstream release
