--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,6 @@
-naba.kumar@nokia.com
-alberto.mardegan@nokia.com
+Alberto Mardegan <alberto.mardegan@nokia.com>
+Marco Barisione <marco.barisione@collabora.co.uk>
+Naba Kumar <naba.kumar@nokia.com>
+Simon McVittie <simon.mcvittie@collabora.co.uk>
+Vivek Dasmohapatra <vivek@collabora.co.uk>
+Will Thompson <will.thompson@collabora.co.uk>
