--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,57 @@
+telepathy-mission-control 5.7.5 (2011-03-01)
+============================================
+
+The “Beware the Ides of March” release.
+
+Fixes:
+
+• Build failures with new --no-add-needed ld default behaviour
+
+• mc-tool: help no longer mentions obsolete add <profile> syntax
+
+• Tests no longer hang forever if DBus name cannot be claimed
+
+telepathy-mission-control 5.7.4 (2011-02-23)
+============================================
+
+The “Northern winters start to thaw” release.
+
+Enhancements:
+
+• fd.o#33271: implement ChannelDispatcher.RedispatchChannels() (cassidy)
+
+• fd.o#34416: support for Account.I.ExternalPasswordStorage (danni)
+
+Fixes:
+
+• fd.o#34316: UpdateParameters: bad handling of DBus_Property and
+  Has_Default in Unset argument (wjt)
+
+telepathy-mission-control 5.7.3 (2011-02-15)
+============================================
+
+The "Future Events Like These Will Affect You in the Future" release.
+
+Dependencies:
+
+• telepathy-glib ≥ 0.13.13 is now required
+
+Enhancements:
+
+• The connection now uses Connection.Interface.ServicePoint.KnownServicePoints
+  to determine which contacts correspond to emergency calls. (fledermaus)
+
+• Request policy plugins cannot affect emergency calls any more. (fledermaus)
+
+• mcd_debug now bypasses printf completely if neither debugging nor the debug
+  cache is turned on. (fledermaus)
+
+Fixes:
+
+• Leak in the DBus ACL plugin mechanism fixed (barisione)
+
+• Potential leak in mcd_master initialisation code fixed (barisione)
+
 telepathy-mission-control 5.7.2 (2011-01-18)
 ============================================
 
