--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+telepathy-mission-control-5 (1:5.7.5-1) experimental; urgency=low
+
+  * New upstream release
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Sat, 05 Mar 2011 15:45:35 +0000
+
 telepathy-mission-control-5 (1:5.7.2-1) experimental; urgency=low
 
   * New upstream release.
