--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+telepathy-mission-control 5.7.6 (2011-03-09)
+============================================
+
+The “Bulwer—Lytton Fiction Contest Entry” release.
+
+Fixes:
+
+• Updates the Maemo SSO plugin in line with SSO changes (fledermaus)
+
+telepathy-mission-control 5.7.6 (2011-03-07)
+============================================
+
+The “GRINNING CAT FACE WITH SMILING EYES”  release.
+
+Enhancements:
+
+• Support the Observer.DelayApprovers property. (cassidy)
+
 telepathy-mission-control 5.7.5 (2011-03-01)
 ============================================
 
@@ -5,11 +23,11 @@ The “Beware the Ides of March” release.
 
 Fixes:
 
-• Build failures with new --no-add-needed ld default behaviour
+• Build failures with new --no-add-needed ld default behaviour (fledermaus)
 
-• mc-tool: help no longer mentions obsolete add <profile> syntax
+• mc-tool: help no longer mentions obsolete add <profile> syntax (wjt)
 
-• Tests no longer hang forever if DBus name cannot be claimed
+• Tests no longer hang forever if DBus name cannot be claimed (wjt)
 
 telepathy-mission-control 5.7.4 (2011-02-23)
 ============================================
