--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+telepathy-mission-control-5 (1:5.7.7-1) experimental; urgency=low
+
+  * New upstream release
+  * d/p/0001-The-account-is-passed-as-the-object-not-the-user_dat.patch:
+    * Added. Fix potential crash when creating accounts with external account
+      storage
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Wed, 09 Mar 2011 22:22:40 +0000
+
 telepathy-mission-control-5 (1:5.7.5-1) experimental; urgency=low
 
   * New upstream release
