--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+telepathy-mission-control-5 (1:5.7.9-1) experimental; urgency=low
+
+  * New upstream release
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Fri, 08 Apr 2011 21:21:27 +0200
+
 telepathy-mission-control-5 (1:5.7.7-1) experimental; urgency=low
 
   * New upstream release
