--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+telepathy-mission-control-5 (1:5.7.11-1) unstable; urgency=low
+
+  * New upstream release
+  * Move to unstable
+  * debian/libmission-control-plugins0.symbols: Updated
+  * Standards-Version: 3.9.2 (no changes needed)
+
+ -- Sjoerd Simons <sjoerd@debian.org>  Sat, 14 May 2011 14:02:33 +0100
+
 telepathy-mission-control-5 (1:5.7.9-1) experimental; urgency=low
 
   * New upstream release
