--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+telepathy-mission-control-5 (1:5.9.3-2) unstable; urgency=low
+
+  * debian/control:
+    - Add myself to Uploaders list
+    - Build-depends on libnm-glib-dev only on linux-any arch
+  * debian/rules: Only build with NM support on linux architectures
+
+ -- Laurent Bigonville <bigon@debian.org>  Thu, 06 Oct 2011 15:55:17 +0200
+
 telepathy-mission-control-5 (1:5.9.3-1) unstable; urgency=low
 
   * New upstream release.
