Import patches-unapplied version 1:5.9.3-3 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 01483ad7fdad70c22fa84f71420ed3b83572b724

New changelog entries:
  * d/p/0001-fix-build-with-UPower-but-no-NM-or-ConnMan.patch: Fix FTBFS when
    built with UPower but without NM support (Closes: #644589)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+telepathy-mission-control-5 (1:5.9.3-3) unstable; urgency=low
+
+  * d/p/0001-fix-build-with-UPower-but-no-NM-or-ConnMan.patch: Fix FTBFS when
+    built with UPower but without NM support (Closes: #644589)
+
+ -- Laurent Bigonville <bigon@debian.org>  Fri, 07 Oct 2011 15:14:23 +0200
+
 telepathy-mission-control-5 (1:5.9.3-2) unstable; urgency=low
 
   * debian/control:
