--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+telepathy-mission-control-5 (1:5.12.0-2) unstable; urgency=low
+
+  * Merge from experimental into unstable
+  * Add NEWS.Debian for the butterfly -> haze migration
+  * Suggest telepathy-haze
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 09 May 2012 11:22:43 +0100
+
 telepathy-mission-control-5 (1:5.12.0-1) experimental; urgency=low
 
   * New upstream release
