--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+telepathy-mission-control-5 (1:5.12.1-1) experimental; urgency=low
+
+  * New upstream release.
+  * debian/gbp.conf: Set experimental branch names again.
+
+ -- Jonny Lamb <jonny@debian.org>  Wed, 11 Jul 2012 16:17:34 +0100
+
 telepathy-mission-control-5 (1:5.12.0-2) unstable; urgency=low
 
   * Merge from experimental into unstable
