--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+telepathy-mission-control-5 (1:5.13.2-1) experimental; urgency=low
+
+  * New upstream development release
+    - migrates accounts from ~/.mission-control to
+      XDG_DATA_DIRS/telepathy/mission-control, which typically means
+      ~/.local/share/telepathy/mission-control
+    - if the user upgraded to Empathy 3 while running MC << 1:5.12.1-3,
+      complete Empathy's password migration, avoiding inability to change
+      the account's password in future (Closes: #687933)
+
+ -- Simon McVittie <smcv@debian.org>  Thu, 20 Sep 2012 15:57:16 +0100
+
 telepathy-mission-control-5 (1:5.13.1-1) experimental; urgency=low
 
   * New upstream development release.
