--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+telepathy-mission-control-5 (1:5.14.0-1) experimental; urgency=low
+
+  * New upstream stable release
+
+ -- Simon McVittie <smcv@debian.org>  Wed, 03 Oct 2012 18:37:57 +0100
+
 telepathy-mission-control-5 (1:5.13.2-1) experimental; urgency=low
 
   * New upstream development release
