--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,21 @@
+telepathy-mission-control 5.14.1 (2013-05-03)
+=============================================
+
+The “implicit maze” release.
+
+Fixes:
+
+• Only ignore passwords stored in our old gnome-keyring location if Empathy
+  has actually copied them to its new location, fixing use of a
+  gnome-keyring-enabled MC version with no Empathy or other
+  SASLAuthentication handler (e.g. under Sugar). (fd.o #59468, Simon)
+
+• Build successfully with Automake 1.13 (fd.o #59605, Nuno Araujo)
+
+• Isolate regression tests better (fd.o #63119, Simon McVittie)
+
+• Respect NOCONFIGURE in autogen.sh (fd.o #57165, Cosimo Cecchi)
+
 telepathy-mission-control 5.14.0 (2012-10-03)
 =============================================
 
