--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+telepathy-mission-control-5 (1:5.14.1-1) experimental; urgency=low
+
+  * New upstream stable release
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 03 May 2013 12:09:46 +0100
+
 telepathy-mission-control-5 (1:5.14.0-1) experimental; urgency=low
 
   * New upstream stable release
