--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+telepathy-mission-control-5 (1:5.16.1-2) unstable; urgency=medium
+
+  * Disable UPower support and rely on logind to be notified about suspend,
+    the current UPower support is incompatible with 0.99 (Closes: #748938)
+
+ -- Laurent Bigonville <bigon@debian.org>  Sat, 24 May 2014 20:11:30 +0200
+
 telepathy-mission-control-5 (1:5.16.1-1) unstable; urgency=medium
 
   * debian/watch: only watch for stable versions (5.y.z, y even)
