Import patches-unapplied version 1:5.16.2-1 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 8316b499eca23b3ce95a96e594706789f120a518

New changelog entries:
  * New upstream bugfix release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,16 @@
+telepathy-mission-control 5.16.2 (2014-06-11)
+=============================================
+
+Fixes:
+
+• don't crash in 'mc-tool auto-presence' subcommand (fd.o #74187, Simon)
+
+• fix parallel build (Simon)
+
+• Use G_STRFUNC in mission-control-plugins's DEBUG macro (Guillaume)
+
+• Fix a crash when GOA is restarted (fd.o #79827, Guillaume)
+
 telepathy-mission-control 5.16.1 (2014-01-27)
 =============================================
 
@@ -13,6 +26,9 @@ Fixes:
 
 • Fix a crash if unable to create XDG_DATA_HOME/telepathy/mission-control
   (fd.o #72138, Sebastien Bacher)
+
+• connectivity-monitor: start watching 'use-conn' key in constructed,
+  fixing the ability to switch it off (Guillaume Desmottes)
 
 telepathy-mission-control 5.16.0 (2013-10-02)
 =============================================
