Import patches-unapplied version 1:5.16.3-1 to debian/sid
Imported using git-ubuntu import.

Changelog parent: 2ef25aa17c782472b0a56fe76ff53af14340f116

New changelog entries:
  * debian/watch: mangle version number to omit epoch
  * New upstream stable release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+telepathy-mission-control 5.16.3 (2014-08-25)
+=============================================
+
+Fixes:
+
+• mcd-connection: use tp_asv_new() properly (fd.o #81751, Steffen Kieß)
+
 telepathy-mission-control 5.16.2 (2014-06-11)
 =============================================
 
