--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+telepathy-mission-control-5 (1:5.16.3-1ubuntu2) wily; urgency=medium
+
+  * debian/control:
+    - libmission-control-plugins-dev depends on libtelepathy-glib-dev,
+      since the .pc has it as a requires, thanks Rohan Garg (lp: #1464449)
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 16 Jun 2015 15:31:19 +0200
+
 telepathy-mission-control-5 (1:5.16.3-1ubuntu1) vivid; urgency=low
 
   * Merge from Debian unstable.  Remaining changes:
