Import patches-unapplied version 1:5.16.3-1ubuntu3 to ubuntu/wily-proposed
Imported using git-ubuntu import.

Changelog parent: e6edc94ad7d41a04d08c1708bd0b06111023aa19

New changelog entries:
  [ Ken VanDine ]
  * debian/apparmor-profile:
    - Allow getprop execution by mission-control and its plugins
    - LP: #1442962
  [ Jamie Strandboge ]
  * debian/apparmor-profile: additional rules for mako:
    - use attach_disconnected, allow write to /dev/socket/property_service
      (requires attach_disconnected) and read on @{PROC}/cmdline
    - LP: #1476781

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+telepathy-mission-control-5 (1:5.16.3-1ubuntu3) wily; urgency=medium
+
+  [ Ken VanDine ]
+  * debian/apparmor-profile:
+    - Allow getprop execution by mission-control and its plugins
+    - LP: #1442962
+
+  [ Jamie Strandboge ]
+  * debian/apparmor-profile: additional rules for mako:
+    - use attach_disconnected, allow write to /dev/socket/property_service
+      (requires attach_disconnected) and read on @{PROC}/cmdline
+    - LP: #1476781
+
+ -- Jamie Strandboge <jamie@ubuntu.com>  Tue, 21 Jul 2015 14:10:53 -0500
+
 telepathy-mission-control-5 (1:5.16.3-1ubuntu2) wily; urgency=medium
 
   * debian/control:
