--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+telepathy-mission-control-5 (1:5.16.3-1ubuntu4) wily; urgency=medium
+
+  * debian/patches/fix-1473011.patch
+    - Fix autoconnection of accounts with always_dispatch=true (LP: #1473011)
+
+ -- Ken VanDine <ken.vandine@canonical.com>  Mon, 27 Jul 2015 13:05:55 -0400
+
 telepathy-mission-control-5 (1:5.16.3-1ubuntu3) wily; urgency=medium
 
   [ Ken VanDine ]
